Bug 1975366 - [New User Activation] Adjust position of arrow on Custom Wallpaper Highlight r=home-newtab-reviewers,maxx,reemhamz
Dropped the arrow down by 2px and the highlight overall down by 20px so that the arrow points at the updated Customize icon.
Moved the highlight to the left so that the arrow points at the icon from a safe distance instead of overlapping it.

Differential Revision: https://phabricator.services.mozilla.com/D256383

--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -8196,7 +8196,7 @@ main section {
   inset-inline-start: 0;
 }
 .wallpaper-feature-highlight .feature-highlight .feature-highlight-modal.inset-inline-start {
-  inset-inline-end: calc(var(--space-xlarge) * 2);
+  inset-inline-end: calc(var(--space-xxlarge) * 2);
 }
 .wallpaper-feature-highlight .feature-highlight .feature-highlight-modal.inset-inline-start::after {
   inset-inline-end: calc(var(--arrow-size) / 2 * -1);
@@ -8209,10 +8209,10 @@ main section {
 }
 .wallpaper-feature-highlight .feature-highlight .feature-highlight-modal.inset-block-start {
   inset-block-end: 0;
-  margin-block-end: 0;
+  margin-block-end: calc(-4 * var(--space-xsmall));
 }
 .wallpaper-feature-highlight .feature-highlight .feature-highlight-modal.inset-block-start::after {
-  inset-block-end: var(--arrow-size);
+  inset-block-end: calc(var(--arrow-size) - var(--space-xxsmall));
 }
 .wallpaper-feature-highlight .feature-highlight .feature-highlight-modal .title {
   font-weight: var(--font-weight-bold);
